Hindrer overstyring til uttak av bare en fri utsettelse