@@ -18,6 +18,7 @@ import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode.OppgittFordelingEntitet;
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode.OppgittPeriodeBuilder;
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode.UttakPeriodeType;
+import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.årsak.UtsettelseÅrsak;
 import no.nav.foreldrepenger.behandlingslager.virksomhet.Arbeidsgiver;
 import no.nav.foreldrepenger.domene.uttak.input.BeregningsgrunnlagStatus;
 import no.nav.foreldrepenger.domene.uttak.input.UttakInput;
@@ -47,7 +48,7 @@ class FaktaUttakAksjonspunktUtlederTest {
         var ap = utleder.utledAksjonspunkterFor(input);
 
         assertThat(ap).hasSize(1);
-        assertThat(ap.get(0)).isEqualTo(AksjonspunktDefinisjon.FAKTA_UTTAK_MANUELT_SATT_STARTDATO_ULIK_SØKNAD_STARTDATO);
+        assertThat(ap.getFirst()).isEqualTo(AksjonspunktDefinisjon.FAKTA_UTTAK_MANUELT_SATT_STARTDATO_ULIK_SØKNAD_STARTDATO);
     }
 
     @Test
@@ -60,7 +61,25 @@ class FaktaUttakAksjonspunktUtlederTest {
         var ap = utleder.utledAksjonspunkterFor(input);
 
         assertThat(ap).hasSize(1);
-        assertThat(ap.get(0)).isEqualTo(AksjonspunktDefinisjon.FAKTA_UTTAK_INGEN_PERIODER);
+        assertThat(ap.getFirst()).isEqualTo(AksjonspunktDefinisjon.FAKTA_UTTAK_INGEN_PERIODER);
+    }
+
+    @Test
+    void ap_hvis_bare_perioder_med_fri_utsettelse() {
+        var utsettelse = OppgittPeriodeBuilder.ny()
+            .medPeriode(LocalDate.now(), LocalDate.now().plusWeeks(10))
+            .medPeriodeKilde(FordelingPeriodeKilde.SAKSBEHANDLER)
+            .medÅrsak(UtsettelseÅrsak.FRI)
+            .build();
+        var scenario = ScenarioMorSøkerForeldrepenger.forFødsel()
+            .medJustertFordeling(new OppgittFordelingEntitet(List.of(utsettelse), true));
+        var behandling = scenario.lagre(repositoryProvider);
+
+        var input = new UttakInput(BehandlingReferanse.fra(behandling), null, null);
+        var ap = utleder.utledAksjonspunkterFor(input);
+
+        assertThat(ap).hasSize(1);
+        assertThat(ap.getFirst()).isEqualTo(AksjonspunktDefinisjon.FAKTA_UTTAK_INGEN_PERIODER);
     }
 
     @Test
@@ -81,7 +100,7 @@ class FaktaUttakAksjonspunktUtlederTest {
         var ap = utleder.utledAksjonspunkterFor(input);
 
         assertThat(ap).hasSize(1);
-        assertThat(ap.get(0)).isEqualTo(AksjonspunktDefinisjon.FAKTA_UTTAK_GRADERING_UKJENT_AKTIVITET);
+        assertThat(ap.getFirst()).isEqualTo(AksjonspunktDefinisjon.FAKTA_UTTAK_GRADERING_UKJENT_AKTIVITET);
     }
 
     @Test
@@ -103,6 +122,6 @@ class FaktaUttakAksjonspunktUtlederTest {
         var ap = utleder.utledAksjonspunkterFor(input);
 
         assertThat(ap).hasSize(1);
-        assertThat(ap.get(0)).isEqualTo(AksjonspunktDefinisjon.FAKTA_UTTAK_GRADERING_AKTIVITET_UTEN_BEREGNINGSGRUNNLAG);
+        assertThat(ap.getFirst()).isEqualTo(AksjonspunktDefinisjon.FAKTA_UTTAK_GRADERING_AKTIVITET_UTEN_BEREGNINGSGRUNNLAG);
     }
 }
